[gd_scene load_steps=8 format=3 uid="uid://xkrd445r1an8"]

[ext_resource type="Script" path="res://laser.gd" id="1_d4dqi"]
[ext_resource type="Texture2D" uid="uid://b83ioxp5srcb" path="res://alien.png" id="1_fa4kd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kyqpi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cndb0"]
radius = 18.0

[sub_resource type="Animation" id="Animation_cfsfx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 419.5, 130, 183.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, -2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, -1)]
}

[sub_resource type="Animation" id="Animation_iavy0"]
resource_name = "explode"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(284, 457.5, 162, 127), Rect2(284, 457.5, 162, 127)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-33, 17)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-33, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x6trr"]
_data = {
"RESET": SubResource("Animation_cfsfx"),
"explode": SubResource("Animation_iavy0")
}

[node name="laser" type="CharacterBody2D"]
z_index = 1
collision_layer = 8
collision_mask = 8
motion_mode = 1
script = ExtResource("1_d4dqi")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-24, 16)
texture = ExtResource("1_fa4kd")
region_enabled = true
region_rect = Rect2(0, 419.5, 130, 183.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(24, -2)
shape = SubResource("CircleShape2D_kyqpi")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(23, -1)
shape = SubResource("CircleShape2D_cndb0")

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x6trr")
}

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
